--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ body {
   padding: 35px 20px;
 }
 /* CSS for main section */
-.intro {
+/*.intro {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,7 +45,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
+}*/
 
 .intro h1 {
   font-family: sans-serif;
